Made timelapse link to video

--- a/PaddockPlantationTimelapse.html
+++ b/PaddockPlantationTimelapse.html
@@ -18,12 +18,14 @@
       margin-bottom: 40px;
     }
   </style></head><body>
-    <!--<meta http-equiv="refresh" content="0; url=http://jgohyeah.github.io/HPVSimulator/" />-->
-  <!--<a href="http://jgohyeah.github.io/HPVSimulator/">Click here to go to the HPV Simulator if you are not automatically redirected.</a>-->
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/lajF1W_7d8U" />
 
     <div>
-      <h1>You're a bit early!</h1>
-      <p>At some point this will be a redirect to the video, however I need to upload it first :).</p>
+      <h1>Redirecting to the pandemic plantation timelapse</h1>
+      <p>
+        <a href="https://youtu.be/lajF1W_7d8U">Click here to go to the video (https://youtu.be/lajF1W_7d8U) if you are not automatically redirected.</a>
+      </p>
+      <p>The main reason for this weird page doing redirects is because I needed a link to the video before I actually had the video :)</p>
     </div>
   </body>
 </html>
