--- a/PaddockPlantationTimelapse.html
+++ b/PaddockPlantationTimelapse.html
@@ -1,30 +1,34 @@
 <html>
   <head>
     <style>
-    body {
-      background-color: #daebe8;
-    }
-    * {
-      font-family: Arial, Helvetica, sans-serif;
-      text-align: center;
-    }
-    div {
-      background-color: #87bdd8;
-      max-width: 600px;
-      margin: 30px auto;
-      padding: 20px;
-    }
-    h1 {
-      margin-bottom: 40px;
-    }
-  </style></head><body>
-    <meta http-equiv="refresh" content="0; url=https://youtu.be/lajF1W_7d8U" />
+      body {
+        background-color: #daebe8;
+      }
+      * {
+        font-family: Arial, Helvetica, sans-serif;
+        /*text-align: center;*/
+      }
+      div {
+        background-color: #87bdd8;
+        max-width: 600px;
+        margin: 30px auto;
+        padding: 20px;
+      }
+      h1 {
+        margin-bottom: 40px;
+      }
+    </style>
+  </head>
+  <body>
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/OD4dWEGN-B4">
 
     <div>
-      <h1>Redirecting to the pandemic plantation timelapse</h1>
-      <p>
-        <a href="https://youtu.be/lajF1W_7d8U">Click here to go to the video (https://youtu.be/lajF1W_7d8U) if you are not automatically redirected.</a>
-      </p>
+      <h1>Redirecting to the pandemic plantation timelapse...</h1>
+      <h2>Previous videos (if you are not automatically redirected)</h2>
+      <ul>
+        <li><b>19/07/2022:</b> <a href="https://youtu.be/OD4dWEGN-B4">https://youtu.be/OD4dWEGN-B4</a></li>
+        <li><b>26/12/2021:</b> <a href="https://youtu.be/lajF1W_7d8U">https://youtu.be/lajF1W_7d8U</a></li>
+      </ul>
       <p>The main reason for this weird page doing redirects is because I needed a link to the video before I actually had the video :)</p>
     </div>
   </body>
