--- a/PaddockPlantationTimelapse.html
+++ b/PaddockPlantationTimelapse.html
@@ -20,12 +20,13 @@
     </style>
   </head>
   <body>
-    <meta http-equiv="refresh" content="0; url=https://youtu.be/OD4dWEGN-B4">
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/rbYAF5bh35Q">
 
     <div>
       <h1>Redirecting to the pandemic plantation timelapse...</h1>
       <h2>Previous videos (if you are not automatically redirected)</h2>
       <ul>
+        <li><b>23/02/2023:</b> <a href="https://youtu.be/rbYAF5bh35Q">https://youtu.be/rbYAF5bh35Q</a></li>
         <li><b>19/07/2022:</b> <a href="https://youtu.be/OD4dWEGN-B4">https://youtu.be/OD4dWEGN-B4</a></li>
         <li><b>26/12/2021:</b> <a href="https://youtu.be/lajF1W_7d8U">https://youtu.be/lajF1W_7d8U</a></li>
       </ul>
